force-app/main/default/objects/Call_Requests__c/Call_Requests__c.object-meta.xml
<CustomObject>
    <label>Call Request</label>
    <nameField>
        <label>Call Requests Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Call Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>