force-app/main/default/objects/Call_Requests__c/fields/Call_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Call_Frequency__c</fullName>
    <label>Call Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Fortnightly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>