force-app/main/default/objects/Call_Requests__c/fields/Call_Time__c.field-meta.xml
<CustomField>
    <fullName>Call_Time__c</fullName>
    <label>Call Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>after 1pm</fullName>
            </value>
            <value>
                <fullName>12md</fullName>
            </value>
            <value>
                <fullName>11am</fullName>
            </value>
            <value>
                <fullName>10am</fullName>
            </value>
            <value>
                <fullName>9:30am</fullName>
            </value>
            <value>
                <fullName>9am</fullName>
            </value>
            <value>
                <fullName>8.30am</fullName>
            </value>
            <value>
                <fullName>8am</fullName>
            </value>
            <value>
                <fullName>7am</fullName>
            </value>
            <value>
                <fullName>6am</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>