force-app/main/default/objects/Call_Requests__c/fields/CallDayText__c.field-meta.xml
<CustomField>
    <fullName>CallDayText__c</fullName>
    <description>Converts Picklist &apos;Call Day&apos; to text.</description>
    <formula>TEXT(Call_Day__c)</formula>
    <label>CallDayText</label>
    <type>Text</type>
</CustomField>