force-app/main/default/objects/Call_Requests__c/fields/DeliveryDayText__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDayText__c</fullName>
    <formula>TEXT(Delivery_Day__c)</formula>
    <label>DeliveryDayText</label>
    <type>Text</type>
</CustomField>