force-app/main/default/objects/Call_Requests__c/fields/Today__c.field-meta.xml
<CustomField>
    <fullName>Today__c</fullName>
    <description>Hidden Field: Used to get today&apos;s day name e.g. Monday. Used with automation on creating Tasks related to the Call list record. Used in Flow &apos;Create Tasks on Call Request&apos; Object</description>
    <formula>CASE( MOD( TODAY() - DATE( 1900, 1, 7 ), 7 ), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3, &quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, &quot;Saturday&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Today</label>
    <type>Text</type>
</CustomField>